--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "jquery": "^3.3.1",
     "angular-material-icons": "^0.7.1",
     "angular-animate": "^1.7.2",
-    "angular-touch": "^1.7.2"
+    "angular-touch": "^1.7.2",
+    "angular-upload": "^1.0.12"
   },
   "resolutions": {
     "angular": "~1.5.0"
