--- a/bower.json
+++ b/bower.json
@@ -16,9 +16,16 @@
     "angular-material-icons": "^0.7.1",
     "angular-animate": "^1.7.2",
     "angular-touch": "^1.7.2",
-    "angular-upload": "^1.0.12"
+    "angular-upload": "^1.0.12",
+    "angular-trix": "^1.0.2",
+    "angularjs-datepicker": "^2.1.23",
+    "angular-moment": "^1.2.0",
+    "angular-datepicker": "^2.0.3",
+    "moment-timezone": "^0.5.17"
   },
   "resolutions": {
-    "angular": "~1.5.0"
+    "angular": "~1.5.0",
+    "moment": ">= 2.6.0",
+    "moment-timezone": "~0.4.1"
   }
 }
